<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Background -->
    <ImageView
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="centerCrop"
        android:src="@drawable/c"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Header -->

    <!-- Journal TextBox -->

    <!-- Image Preview -->

    <!-- Attach Button -->
    <EditText
        android:id="@+id/etText"
        android:layout_width="267dp"
        android:layout_height="262dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="none"
        android:gravity="top|start"
        android:hint="@string/journal_hint"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"

        android:inputType="textMultiLine"
        android:minHeight="250dp"
        android:scrollbars="vertical"
        android:background="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/ivPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreateJournal" />

    <RadioGroup
        android:id="@+id/moodGroup"
        android:textColor="@android:color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPreview">

        <RadioButton
            android:id="@+id/rbHappy"
            android:textColor="@android:color/black"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_happy" />

        <RadioButton
            android:id="@+id/rbSad"
            android:textColor="@android:color/black"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_sad" />

        <RadioButton
            android:id="@+id/rbCalm"
            android:textColor="@android:color/black"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_calm" />

        <RadioButton
            android:id="@+id/rbAngry"
            android:textColor="@android:color/black"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_angry" />

        <RadioButton
            android:id="@+id/rbExcited"
            android:textColor="@android:color/black"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_excited" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAttach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/attach_image"
        app:layout_constraintStart_toEndOf="@id/ivPreview"
        app:layout_constraintTop_toTopOf="@id/ivPreview" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="72dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodGroup" />

    <TextView
        android:id="@+id/tvCreateJournal"
        android:textColor="@android:color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/create_journal_screen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/image_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etText" />

    <!-- Mood Selection -->

    <!-- Save Button -->

</androidx.constraintlayout.widget.ConstraintLayout>
